Fix: Footer: add min hieght to outer-wrapper to keep pages with little content ok looking. Expand footer colror instead of white gap on large screens

--- a/css/responsive.css
+++ b/css/responsive.css
@@ -28,7 +28,8 @@
     ===========================================*/
 
     #about {
-        margin-top: 20px;
+        margin-top: -60px;
+        padding-top: 80px;
     }
     .profile-photo{
       margin: 0;
