--- a/css/style.css
+++ b/css/style.css
@@ -16,13 +16,13 @@ body {
     width: 100%;
 }
 
-.wrapper{
-    padding-bottom: 200px;
-}
 
 .outer-wrapper{
-    min-height: 100%;
-    position: relative;
+    min-height: 800px;
+    background: #f9f9f9;
+    margin-top: -60px;
+    padding-top: 80px;
+
 }
 
 
@@ -31,7 +31,7 @@ body {
     font-weight: normal;
     color: #333;
     font-size: 1.75em;
-    background: #f9f9f9;
+    background: #1e1e1e;
     margin: 0px;
 }
 a:focus, a:hover {
@@ -98,7 +98,7 @@ h3 {
 #about {
     /*min-height: 300px;*/
     margin: 0px 0 0px;
-    padding: 20px 0 0;
+    padding: 0px 0 0;
 
 
 }
@@ -268,8 +268,9 @@ h1 {
     padding: 30px 0 10px;
     bottom: 0;
     left: 0;
-    position: absolute;
     width: 100%;
+
+
 
 }
 #footer a {
